sumo/tests/sumo/extended/vaporizer/errors/begin_larger_than_end/errors.sumo
Error: A vaporization ends before it starts (edge id='middle').
Quitting (on error).
